corrected layout, and spacing

--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 * {
     box-sizing: border-box;
     text-align: center;
-    
   }
   
   body {
@@ -15,31 +14,30 @@
 
   .wrapper {
     width: 960px;
-  }
-
-  p, h1 {
-    color: #777;
-    background-color: #ebebeb;
+    padding: 30px;
   }
 
   .header {
     background-color: #ebebeb;
     margin-bottom: 10px;
-    width: 100%;
-    height: 100px;
+    width: 960px;
+    height: 50px;
+    text-align: center;
   }
   
   .nav {
-  background-color: #ebebeb;
-  width: 960px;
-  height: 100px;
-  margin-bottom: 10px;
+    background-color: #ebebeb;
+    width: 960px;
+    height: 50px;
+    margin-bottom: 10px;
+    text-align: center;
 
   }
   .aside {
     background-color: #ebebeb;
     width: 45%;
     float: right;
+    height: 250px;
   }
   .section {
     background-color: #ebebeb;
@@ -48,31 +46,40 @@
   
   }
   .article {
+    margin: auto;    
     background-color:#777;
     color: #ebebeb;
-    width: 495px;
-    height: 100px;
+    width: 80%;
+    align: center;
+    text-align: center;
   }
 
   .heading {
     font-weight: bold;
     background-color: #ebebeb;
+    color: #777;
+    margin: 15px;
+
   }
 
-  .p{
+  .p {
     color: #777;
-    background: #ebebeb;
+    background-color: #ebebeb;
+    text-align: center;
+    margin: 15px;
+    border-bottom: 10px;
   }
-  
-  .clear-fix{
+
+  .clear-fix {
     clear: both;
+    overflow: auto;
   }
-  
+
   .footer {
     background-color: #ebebeb;
-    margin: 10px;
-    width: 960px;
-    height: 100px;
+    height: 50px;
     clear: both;
-    margin-top: 50px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    text-align: center;
   }
